--- a/index.j2
+++ b/index.j2
@@ -1,4 +1,4 @@
 <h1> this is DEVOPS CLASS </h1>
 <h1> my node ip is "{{ansible_all_ipv4_addresses}}" </h1>
 <h1> my node family is "{{ansible_os_family}}" </h1>
-<h1> web pack for ubuntu is "{{webserversonubuntu}}" </h1>
+<h1> web pack for ubuntu is "{{webserversonUbuntu}}" </h1>
